# SystemWatcher

agent/: Cargo.toml
agent/src/: main.rs
server/: .env  Cargo.toml
server/migrations/2022-05-02-120417_nodes/: down.sql  up.sql
server/migrations/2022-05-03-134353_stat_types/: down.sql  up.sql
server/migrations/2022-05-03-141216_stats/: down.sql  up.sql
server/src/: main.rs  schema.rs
server/src/models/: mod.rs  nodes.rs  stats.rs
server/src/routes/: nodes.rs
