[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Powerful date and time functionality
chrono = { version = "*", features = ["serde"] }

# For connecting with the MySQL database
diesel = { version = "*", features = ["chrono"] }

# Lazy static initialization
lazy_static = "*"

# Rocket Webserver
rocket = "*"
rocket_contrib = { version = "*", features = ["json", "diesel_postgres_pool"] }

# Serialization/Deserialization
serde_json = "*"
serde = "*"
serde_derive = "*"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
